new-infra/k8s/wazuh-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wazuh
  labels:
    name: wazuh
    app.kubernetes.io/part-of: xdr-platform
